<resources>
    <string name="app_name">CodeFácil</string>
    <string name="title_activity_settings">Configurações</string>
    <string name="title_activity_statistics">Estatísticas</string>
    <string name="title_activity_result">Resultado</string>
    <string name="title_activity_challenge">Desafio</string>

    <string name="filter_all">Todos</string>
    <string name="level_basic">Básico</string>
    <string name="level_intermediate">Intermediário</string>
    <string name="level_advanced">Avançado</string>

    <string name="level_prefix">Nível: %s</string>

    <string name="reset_challenge_progress">Resetar Progresso</string>
    <string name="progress_reset">Progresso do desafio resetado!</string>

    <string name="correct_answer">Resposta Correta!</string>
    <string name="wrong_answer">Resposta Errada!</string>
    <string name="explanation">Explicação:</string>
    <string name="next_challenge">Próximo Desafio</string>
    <string name="back_to_dashboard">Voltar à Lista</string>
    <string name="share_conquest">Compartilhar</string>
    <string name="all_challenges_completed">Parabéns! Você completou todos os desafios.</string>

    <string name="share_subject">Meu Progresso no CodeFácil!</string>
    <string name="share_message_correct">Acertei o desafio "%s" no CodeFácil! Venha aprender lógica de programação também!</string>
    <string name="share_message_wrong">Aprendi muito com o desafio "%s" no CodeFácil. Que tal tentar?</string>
    <string name="share_via">Compartilhar via</string>

    <string name="statistics">Estatísticas</string>
    <string name="stats_solved">Resolvidos</string>
    <string name="stats_correct">Acertos</string>
    <string name="stats_wrong">Erros</string>
    <string name="stats_progress_by_level">Progresso por Nível</string>
    <string name="stats_no_challenges">Nenhum desafio neste nível.</string>

    <string name="login_title">Bem-vindo de volta!</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="button_login">Entrar</string>
    <string name="prompt_register">Não tem uma conta? Registe-se</string>
    <string name="register_title">Criar Conta</string>
    <string name="button_register">Registar</string>
    <string name="prompt_login">Já tem uma conta? Entre</string>

    <string name="glossary">Glossário</string>
    <string name="add_term">Adicionar Termo</string>
    <string name="edit_term">Editar Termo</string>
    <string name="delete_term">Deletar Termo</string>
    <string name="delete_term_confirmation">Você tem certeza que quer deletar este termo?</string>
    <string name="delete">Deletar</string>
    <string name="cancel">Cancelar</string>
    <string name="term">Termo</string>
    <string name="definition">Definição</string>
    <string name="language">Linguagem</string>
    <string name="language_prefix">Linguagem: %s</string>
    <string name="level">Nível</string>
    <string name="save">Salvar</string>

    <string name="technical_dictionary">Dicionário Técnico</string>
    <string name="enter_a_term">Insira um termo (em inglês)</string>
    <string name="search">Pesquisar</string>
</resources>